service/tests/models/products/snapshots/pictures/can_create_product_picture_successful@pictures.snap
---
source: tests/models/products/pictures.rs
expression: result
---
Ok(
    Picture {
        id: ID,
        pid: PID,
        product_id: ID,
        variant_id: None,
        image_link: "https://cdn.example.com/products/leather-bag-main.png",
        display_order: Some(
            3,
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
