service/tests/models/products/snapshots/pictures/cannot_create_picture_when_product_does_not_exist@pictures.snap
---
source: tests/models/products/pictures.rs
expression: result
---
Err(
    InvalidReference(
        "Product does not exist.",
    ),
)
