service/tests/models/products/snapshots/pictures/cannot_create_picture_when_variant_does_not_exist@pictures.snap
---
source: tests/models/products/pictures.rs
expression: result
---
Err(
    InvalidReference(
        "Product variant does not exist.",
    ),
)
